<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <!--team A display-->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <!--team A name-->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="@dimen/name_padding"
                android:text="@string/teamA_name"
                android:textColor="#616161"
                android:textSize="@dimen/name_size" />

            <!--team a score-->
            <TextView
                android:id="@+id/team_a_score"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="@dimen/score_padding"
                android:text="@string/score_text"
                android:textColor="#000000"
                android:textSize="@dimen/score_size" />

            <!--team a increase by 3-->
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/button_margin"
                android:layout_marginRight="@dimen/button_margin"
                android:onClick="increment3PointsA"
                android:padding="@dimen/button_padding"
                android:text="@string/increase_by_3" />

            <!--team a increase by 2-->
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/button_margin"
                android:layout_marginRight="@dimen/button_margin"
                android:onClick="increment2PointsA"
                android:padding="@dimen/button_padding"
                android:text="@string/increase_by_2" />

            <!--team a increase by 1-->
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/button_margin"
                android:layout_marginRight="@dimen/button_margin"
                android:onClick="increment1PointA"
                android:padding="@dimen/button_padding"
                android:text="@string/free_throw" />
        </LinearLayout>

        <!--separator line-->
        <View
            android:layout_width="@dimen/line_width"
            android:layout_height="@dimen/line_height"
            android:background="@android:color/darker_gray" />

        <!--team B display-->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <!--team b name-->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="@dimen/name_padding"
                android:text="@string/teamB_name"
                android:textColor="#616161"
                android:textSize="@dimen/name_size" />

            <!--team b score-->
            <TextView
                android:id="@+id/team_b_score"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="@dimen/score_padding"
                android:text="@string/score_text"
                android:textColor="#000000"
                android:textSize="@dimen/score_size" />

            <!--team b increase by 3-->
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/button_margin"
                android:layout_marginRight="@dimen/button_margin"
                android:onClick="increment3PointsB"
                android:padding="@dimen/button_padding"
                android:text="@string/increase_by_3" />

            <!--team b increase by 2-->
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/button_margin"
                android:layout_marginRight="@dimen/button_margin"
                android:onClick="increment2PointsB"
                android:padding="@dimen/button_padding"
                android:text="@string/increase_by_2" />

            <!--team b increase by 1-->
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/button_margin"
                android:layout_marginRight="@dimen/button_margin"
                android:onClick="increment1PointB"
                android:padding="@dimen/button_padding"
                android:text="@string/free_throw" />
        </LinearLayout>

    </LinearLayout>
    <!--reset button for score-->
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_margin="@dimen/reset_margin"
        android:onClick="resetScore"
        android:text="@string/reset" />

</RelativeLayout>
